compiler-bin/iris-progress/src/snapshots/iris_progress__tests__narrow_frame_true_color_ansi.snap
---
source: compiler-bin/iris-progress/src/tests.rs
---
"\u{1b}[3;1H[\u{1b}[38;2;244;160;166;49m⣿\u{1b}[38;2;249;200;206;49m⣿\u{1b}[38;2;254;241;243;49m⣇\u{1b}[1m\u{1b}[38;2;230;220;210;49m⠀\u{1b}[22m\u{1b}[38;2;54;60;67;49m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\u{1b}[39;49m]\u{1b}[4;1H\u{1b}[38;5;15;49mCompiling 2 of 12…\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
