compiler-bin/iris-progress/src/snapshots/iris_progress__tests__preparation_frame_plain.snap
---
source: compiler-bin/iris-progress/src/tests.rs
---
Preparing [=============================#======]
