compiler-bin/iris-progress/src/snapshots/iris_progress__tests__preparation_frame_true_color_ansi.snap
---
source: compiler-bin/iris-progress/src/tests.rs
---
"\u{1b}[1;1H\u{1b}[38;5;15;49mPreparing\u{1b}[1;11H\u{1b}[39;49m[\u{1b}[38;2;240;128;136;49m⣿\u{1b}[38;2;241;130;140;49m⣿\u{1b}[38;2;241;132;144;49m⣿\u{1b}[38;2;242;134;148;49m⣿\u{1b}[38;2;243;136;152;49m⣿\u{1b}[38;2;243;138;157;49m⣿\u{1b}[38;2;244;140;161;49m⣿\u{1b}[38;2;245;142;165;49m⣿\u{1b}[38;2;245;144;169;49m⣿\u{1b}[38;2;246;147;173;49m⣿\u{1b}[38;2;247;149;177;49m⣿\u{1b}[38;2;248;151;181;49m⣿\u{1b}[38;2;246;152;185;49m⣿\u{1b}[38;2;241;150;189;49m⣿\u{1b}[38;2;235;149;192;49m⣿\u{1b}[38;2;230;147;195;49m⣿\u{1b}[38;2;224;146;199;49m⣿\u{1b}[38;2;219;145;202;49m⣿\u{1b}[38;2;213;143;206;49m⣿\u{1b}[38;2;208;142;209;49m⣿\u{1b}[38;2;202;141;213;49m⣿\u{1b}[38;2;197;139;216;49m⣿\u{1b}[38;2;191;138;219;49m⣿\u{1b}[38;2;186;136;223;49m⣿\u{1b}[38;2;181;132;222;49m⣿\u{1b}[38;2;177;127;219;49m⣿\u{1b}[38;2;173;121;217;49m⣿\u{1b}[38;2;191;151;224;49m⣿\u{1b}[38;2;215;190;235;49m⣿\u{1b}[38;2;244;237;249;49m⣿\u{1b}[38;2;211;185;233;49m⣿\u{1b}[38;2;178;134;216;49m⣿\u{1b}[38;2;148;88;200;49m⣿\u{1b}[38;2;144;83;197;49m⣿\u{1b}[38;2;140;77;195;49m⣿\u{1b}[38;2;136;72;192;49m⣿\u{1b}[39;49m]\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
