compiler-bin/iris-progress/src/snapshots/iris_progress__tests__watch_diagnostics_plain.snap
---
source: compiler-bin/iris-progress/src/tests.rs
---
12:35:01  Rebuild completed with diagnostics in 1.25 s
          Changed 1 input: Application
